# hunter

./: .gitignore  CONTRIBUTING.md  FINAL_SPEC.md  LICENSE  PROJECT_SUMMARY.md  README.md  SOUL.md  pyproject.toml  requirements.txt  test_installation.py  test_suite.py
config/: config.example.yaml
docs/: academic_strategies_guide.md  quickstart.md
docs/patterns/: README.md
hunter/: cli.py
hunter/core/: ai_agent.py  config.py  database.py  logger.py  paper_trading.py  scheduler.py
hunter/data/: sources.py
hunter/interfaces/: telegram_bot.py
hunter/strategies/: academic_strategies.py  advanced.py  engine.py
